--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.travalplanner</groupId>
+    <groupId>com.tarvelplanner</groupId>
     <artifactId>Backend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Backend</name>
@@ -98,8 +98,6 @@
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
