--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.23.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
